--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AIRecommender"
         tools:targetApi="31">
         <activity
+            android:name=".view.ClothFormActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.SignupActivity"
             android:exported="false" />
         <activity
@@ -32,8 +35,7 @@
         </activity>
         <activity
             android:name=".view.MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
