--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.AIRecommender"
         tools:targetApi="31">
         <activity
+            android:name=".view.EditProfile"
+            android:exported="false" />
+        <activity
             android:name=".view.ResultActivity"
             android:exported="false" />
         <activity
