--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ playServicesAuth = "21.3.0"
 lifecycleViewmodelAndroid = "2.8.7"
 firebaseFirestore = "25.1.3"
 firebaseStorage = "21.0.1"
+sdkForAndroid = "7.0.1"
 
 [libraries]
 credentials-play-services-auth-v122 = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialsPlayServicesAuthVersion" }
@@ -41,6 +42,7 @@ play-services-auth = { module = "com.google.android.gms:play-services-auth", ver
 lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
+sdk-for1-android = { module = "io.appwrite:sdk-for-android", version.ref = "sdkForAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
